removed 'JSON' from /api endpoint on index.html as it was replaced

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,7 @@
     <main>
       <section id="api">
         <h2>GET /api</h2>
-        <p>Returns a JSON of all available API endpoints.</p>
-        <pre><code>{
-  "GET /api": { "description": "serves up a json representation of all the available endpoints of the api" }
-}</code></pre>
+        <p>Returns all available API endpoints.</p>
       </section>
 
       <section id="topics">
